Realizzato un markup statico (brutto) di base. Aggiunto array lista inizialmente con soli 3 oggetti. Uso del ciclo v-for per stamparlia video

--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.content-list{
+    width: 100%;
+    min-height: 400px;
+    background-color:rgb(16, 78, 116);
+}
